# acp-python

./: README.md  pyproject.toml
.github/workflows/: publish-pypi.yaml  release.yaml
examples/: user.py
src/: example.ipynb
src/acp_python/: __init__.py  exceptions.py  types.py
src/acp_python/agent/: __main__.py  base.py  chat.py  crypto.py  types.py  user.py
src/acp_python/agent/examples/: chat.py  user.py
src/acp_python/agent/session/: policy.py  store.py
src/acp_python/agent/transport/: base.py  nats.py
src/acp_python/agent/utils/: crypto.py  iter.py
src/acp_python/agents/: actor.py  base.py  chat.py  user.py
src/acp_python/client/: __init__.py  client.py  exception.py  middleware.py
src/acp_python/client/handlers/: __init__.py  handshake.py  message.py
src/acp_python/client/policy/: discovery.py
src/acp_python/client/session/: __init__.py  policy.py  store.py
src/acp_python/client/types/: __init__.py  actor.py  message.py  session.py
src/acp_python/core/: crypto.py
src/acp_python/core/policy/: discovery.py
src/acp_python/core/session/: store.py
src/acp_python/core/types/: __init__.py  actor.py  message.py  session.py
src/acp_python/examples/: agent.py  mesage.py
src/acp_python/identity/: README.md  types.py
src/acp_python/session/: policy.py  store.py
src/acp_python/transport/: base.py  nats.py
src/acp_python/types/: __init__.py  actor.py  exceptions.py  handshake.py  keypair.py  message.py  session.py
src/acp_python/utils/: crypto.py  iter.py  openai.py
tests/: client.py
