[project]
name = "acp-python"
version = "0.1.0"
description = "Actor Communication Protocol (ACP) for Python"
readme = "README.md"
authors = [
    { name = "Tony Francis", email = "tonyfrancisv@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "anyio>=4.5.2",
    "cryptography>=44.0.1",
    "nats-py[aiohttp,nkeys]>=2.9.0",
    "pydantic>=2.10.6",
    "uvloop>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "ruff>=0.9.7",
    "typer>=0.15.1",
]
redis = [
    "aioredis>=2.0.1",
]
cli = [
    "typer>=0.15.1",
]
boto3 = [
    "aioboto3>=14.0.0",
]
agent = [
    "openai>=1.64.0",
]
